--- a/src/meuComponente.css
+++ b/src/meuComponente.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&family=Krona+One&family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
-
 :root{
     --fonte-principal: "Bebas Neue", sans-serif;
     --fonte-secundaria: "Open Sans", sans-serif;
@@ -63,6 +62,7 @@ header{
    animation: show 0.5s forwards, pop-word 2.5s forwards;
   animation-timing-function: cubic-bezier(0.14, 1.23, 0.33, 1.16);
   opacity: 0;
+
   transform: rotateX(120deg);
   transform-origin: 50% 100%;
   animation-delay: 2s;
@@ -93,12 +93,12 @@ header{
 
 .imagem__fundo{
     position: fixed;
-    width: 100%;
-    height: auto;
-    right: 0;
-    top: 0;
-    border-radius: 3px;
-    overflow: hidden;
+  width: 100%;
+  height: auto;
+  right: 0;
+  top: 0;
+  border-radius: 3px;
+  overflow: hidden;
 }
 
 @keyframes animacaoCapa{
@@ -145,6 +145,7 @@ header{
 
 .texto__principal__paragrafo strong{
     font-size: 110%;
+    
 }
 
 @keyframes animacaoTextoPrincipal{
@@ -157,18 +158,21 @@ header{
 /*====[ORIENTAÇÃO LANDSCAPE]====*/
 
 @media screen and (max-width: 1368px) and (orientation: landscape) {
+    
     .texto__principal__subtitulo{
         font-size: 140%;
     }
 }
 
 @media screen and (max-width: 1280px){ 
+    
     .imagem__capa{
         max-height: 70%;
         right: 5%;
     }
     
     .texto__principal{
+
         left: 5%;
         top: 30%;
         max-width: 50%;
@@ -189,9 +193,12 @@ header{
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
+
+    
 }
 
 @media screen and (max-width: 934px) and (orientation: landscape){
+    
     .menu__cabecalho a{
         font-size: 120%;
     }
@@ -223,6 +230,7 @@ header{
 }
 
 @media screen and (max-width: 740px) and (orientation: landscape){
+    
     .menu__cabecalho a{
         font-size: 100%;
     }
@@ -246,12 +254,50 @@ header{
     .texto__principal__paragrafo strong{
         font-size: 90%;
     }
+
 }
 
 /*====[ORIENTAÇÃO PORTRAIT]====*/
 
-/* Tablets grandes - iPad Pro e similares */
-@media screen and (min-width: 1024px) and (orientation: portrait) {
+@media screen and (max-width: 912px) and (min-width: 853px) and (orientation: portrait) {
+    
+    .imagem__capa{
+        max-height: 70%;
+        right: 30%;
+        left: 30%;
+    }
+
+    .texto__principal{
+        left: 15%;
+        right: 15%;
+        top: 20%;
+        max-width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: justify;
+    }
+    
+    .texto__principal__titulo{
+        font-size: 282%;
+    }
+
+    .texto__principal__subtitulo{
+        font-size: 150%;
+    }
+
+    .texto__principal__paragrafo{
+        font-size: 150%;
+    }
+
+    .texto__principal__paragrafo strong{
+        font-size: 100%;
+    }
+}
+
+@media screen and (max-width: 1024px) and (orientation: portrait) {
+    
     .imagem__capa{
         max-height: 70%;
         right: 30%;
@@ -287,48 +333,15 @@ header{
     }
 }
 
-/* Tablets médios */
-@media screen and (min-width: 853px) and (max-width: 1023px) and (orientation: portrait) {
-    .imagem__capa{
-        max-height: 70%;
-        right: 30%;
-        left: 30%;
-    }
 
-    .texto__principal{
-        left: 15%;
-        right: 15%;
-        top: 20%;
-        max-width: 80%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: justify;
-    }
+@media screen and (max-width: 820px) and (min-width: 768px) and (orientation: portrait) {
     
-    .texto__principal__titulo{
-        font-size: 282%;
-    }
+    
 
-    .texto__principal__subtitulo{
-        font-size: 150%;
-    }
-
-    .texto__principal__paragrafo{
-        font-size: 150%;
-    }
-
-    .texto__principal__paragrafo strong{
-        font-size: 100%;
-    }
-}
-
-/* Tablets pequenos */
-@media screen and (min-width: 768px) and (max-width: 852px) and (orientation: portrait) {
     header{
         flex-direction: column;
         justify-content: center;
+        
     }
 
     .menu__cabecalho{
@@ -352,7 +365,7 @@ header{
     }
 
     .texto__principal{
-        top: 60%;
+        bottom: -23%;
         max-width: 80%;
         left: 10%;
         right: 10%;
@@ -380,12 +393,14 @@ header{
     }
 }
 
-/*====[DUAS TELAS - Surface Duo]====*/
+/*====[DUAS TELAS]====*/
 
 @media (horizontal-viewport-segments: 2) and (orientation: landscape) {
+
    .menu__cabecalho{
     position: relative;
     left: -2%;
+    
    }
 
    .texto__principal{
@@ -404,11 +419,12 @@ header{
    }
 }
 
-/* Fallback para Surface Duo e outros dispositivos dobráveis em portrait */
-@media (max-aspect-ratio: 1/1) and (min-width: 540px) and (max-width: 767px) {
+@media (max-aspect-ratio: 1/1) {
+
     header{
         flex-direction: column;
         justify-content: center;
+        
     }
 
     .menu__cabecalho{
@@ -432,7 +448,7 @@ header{
     }
 
     .texto__principal{
-        top: 50%;
+        bottom: -23%;
         max-width: 80%;
         left: 10%;
         right: 10%;
@@ -444,91 +460,32 @@ header{
     }
     
     .texto__principal__titulo{
-        font-size: 200%;
+        font-size: 250%;
     }
 
     .texto__principal__subtitulo{
-        font-size: 110%;
+        font-size: 130%;
     }
 
     .texto__principal__paragrafo{
-        font-size: 100%;
+        font-size: 120%;
     }
 
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
+
 }
 
 /*====[CELULAR PORTRAIT]====*/
 
-/* Celulares médios/grandes (412px-540px) */
-@media screen and (min-width: 412px) and (max-width: 540px) and (orientation: portrait) {
+@media screen and (max-width: 400px) and (min-width: 320px) and (orientation: portrait) {
     header{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    .menu__cabecalho{
-        position: relative;
-    }
-
-    .menu__cabecalho a{
-        font-size: 110%;
-    }
-
-    .titulo__cabecalho{
-        position: relative;
-        font-size: 125%;
-    }
-
-    .imagem__capa{
-        max-height: 40%;
-        right: 25%;
-        left: 25%;
-        top: 8%;
-    }
-
-    .imagem__fundo{
-        top: 0%;
-    }
-
-    .texto__principal{
-        top: 55%;
-        max-width: 85%;
-        left: 7.5%;
-        right: 7.5%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        text-align: justify;
-    }
-    
-    .texto__principal__titulo{
-        font-size: 155%;
-    }
-
-    .texto__principal__subtitulo{
-        font-size: 90%;
-    }
-
-    .texto__principal__paragrafo{
-        font-size: 85%;
-    }
-
-    .texto__principal__paragrafo strong{
-        font-size: 100%;
-    }
-}
-
-/* Celulares pequenos (320px-411px) */
-@media screen and (max-width: 411px) and (orientation: portrait) {
-    header{
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        
     }
 
     .menu__cabecalho{
@@ -541,6 +498,7 @@ header{
 
     .titulo__cabecalho{
         position: relative;
+        
         font-size: 120%;
     }
 
@@ -556,14 +514,14 @@ header{
     }
 
     .texto__principal{
-        top: 52%;
-        max-width: 85%;
-        left: 7.5%;
-        right: 7.5%;
+        bottom: -23%;
+        max-width: 80%;
+        left: 10%;
+        right: 10%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         text-align: justify;
     }
     
@@ -572,14 +530,78 @@ header{
     }
 
     .texto__principal__subtitulo{
-        font-size: 80%;
+        font-size: 75%;
     }
 
     .texto__principal__paragrafo{
-        font-size: 70%;
+        font-size: 65%;
     }
 
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
-}
+    }
+
+    @media screen and (max-width: 430px) and (min-width: 412px) and (orientation: portrait) {
+    header{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    .menu__cabecalho{
+        position: relative;
+    }
+
+    .menu__cabecalho a{
+        font-size: 110%;
+    }
+
+    .titulo__cabecalho{
+        position: relative;
+        
+        font-size: 125%;
+    }
+
+    .imagem__capa{
+        max-height: 40%;
+        right: 21%;
+        left: 21%;
+        top: 5%;
+    }
+
+    .imagem__fundo{
+        top: 0%;
+    }
+
+    .texto__principal{
+        bottom: -23%;
+        max-width: 80%;
+        left: 10%;
+        right: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: justify;
+    }
+    
+    .texto__principal__titulo{
+        font-size: 155%;
+    }
+
+    .texto__principal__subtitulo{
+        font-size: 80%;
+    }
+
+    .texto__principal__paragrafo{
+        font-size: 75%;
+    }
+
+    .texto__principal__paragrafo strong{
+        font-size: 100%;
+    }
+    }
+
