--- a/src/meuComponente.css
+++ b/src/meuComponente.css
@@ -489,6 +489,20 @@ header{
         align-items: center;
     }
 
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center
+    }
+
+    main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center
+    }
+
     .menu__cabecalho{
         position: relative;
     }
@@ -504,9 +518,13 @@ header{
 
     .imagem__capa{
         max-height: 38%;
-        right: 25%;
-        left: 25%;
-        top: 12%;
+        /*right: 25%;
+        left: 25%;*/
+        top: 10%;
+        left: auto;
+        right: auto;
+        
+        
     }
 
     .imagem__fundo{
