--- a/src/meuComponente.css
+++ b/src/meuComponente.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&family=Krona+One&family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
+
 :root{
     --fonte-principal: "Bebas Neue", sans-serif;
     --fonte-secundaria: "Open Sans", sans-serif;
@@ -22,6 +23,8 @@ header{
     padding: 1%;
     align-items: center;
     justify-content: space-evenly;
+    position: relative;
+    z-index: 100;
 }
 
 .menu__cabecalho a{
@@ -53,6 +56,7 @@ header{
     gap: 5%;
     position: absolute;
     left: 1%;
+    z-index: 100;
 }
 
 .titulo__cabecalho{
@@ -60,13 +64,13 @@ header{
    font-size: 170%;
    display: block;
    animation: show 0.5s forwards, pop-word 2.5s forwards;
-  animation-timing-function: cubic-bezier(0.14, 1.23, 0.33, 1.16);
-  opacity: 0;
-
-  transform: rotateX(120deg);
-  transform-origin: 50% 100%;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
+   animation-timing-function: cubic-bezier(0.14, 1.23, 0.33, 1.16);
+   opacity: 0;
+   transform: rotateX(120deg);
+   transform-origin: 50% 100%;
+   animation-delay: 2s;
+   animation-fill-mode: forwards;
+   z-index: 100;
 }
 
 @keyframes show {
@@ -89,16 +93,18 @@ header{
     border-radius: 1rem;
     animation-name: animacaoCapa;
     animation-duration: 3s;
+    z-index: 1;
 }
 
 .imagem__fundo{
     position: fixed;
-  width: 100%;
-  height: auto;
-  right: 0;
-  top: 0;
-  border-radius: 3px;
-  overflow: hidden;
+    width: 100%;
+    height: auto;
+    right: 0;
+    top: 0;
+    border-radius: 3px;
+    overflow: hidden;
+    z-index: 0;
 }
 
 @keyframes animacaoCapa{
@@ -112,6 +118,7 @@ header{
     top: 30%;
     max-width: 42%;
     height: auto;
+    z-index: 10;
 }
 
 .texto__principal__titulo{
@@ -145,7 +152,6 @@ header{
 
 .texto__principal__paragrafo strong{
     font-size: 110%;
-    
 }
 
 @keyframes animacaoTextoPrincipal{
@@ -158,21 +164,18 @@ header{
 /*====[ORIENTAÇÃO LANDSCAPE]====*/
 
 @media screen and (max-width: 1368px) and (orientation: landscape) {
-    
     .texto__principal__subtitulo{
         font-size: 140%;
     }
 }
 
 @media screen and (max-width: 1280px){ 
-    
     .imagem__capa{
         max-height: 70%;
         right: 5%;
     }
     
     .texto__principal{
-
         left: 5%;
         top: 30%;
         max-width: 50%;
@@ -193,12 +196,9 @@ header{
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
-
-    
 }
 
 @media screen and (max-width: 934px) and (orientation: landscape){
-    
     .menu__cabecalho a{
         font-size: 120%;
     }
@@ -230,7 +230,6 @@ header{
 }
 
 @media screen and (max-width: 740px) and (orientation: landscape){
-    
     .menu__cabecalho a{
         font-size: 100%;
     }
@@ -254,13 +253,11 @@ header{
     .texto__principal__paragrafo strong{
         font-size: 90%;
     }
-
 }
 
 /*====[ORIENTAÇÃO PORTRAIT]====*/
 
 @media screen and (max-width: 912px) and (min-width: 853px) and (orientation: portrait) {
-    
     .imagem__capa{
         max-height: 70%;
         right: 30%;
@@ -297,7 +294,6 @@ header{
 }
 
 @media screen and (max-width: 1024px) and (orientation: portrait) {
-    
     .imagem__capa{
         max-height: 70%;
         right: 30%;
@@ -333,15 +329,10 @@ header{
     }
 }
 
-
 @media screen and (max-width: 820px) and (min-width: 768px) and (orientation: portrait) {
-    
-    
-
     header{
         flex-direction: column;
         justify-content: center;
-        
     }
 
     .menu__cabecalho{
@@ -396,11 +387,9 @@ header{
 /*====[DUAS TELAS]====*/
 
 @media (horizontal-viewport-segments: 2) and (orientation: landscape) {
-
    .menu__cabecalho{
     position: relative;
     left: -2%;
-    
    }
 
    .texto__principal{
@@ -420,11 +409,9 @@ header{
 }
 
 @media (max-aspect-ratio: 1/1) {
-
     header{
         flex-direction: column;
         justify-content: center;
-        
     }
 
     .menu__cabecalho{
@@ -474,33 +461,15 @@ header{
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
-
 }
 
 /*====[CELULAR PORTRAIT]====*/
 
-/*====[CELULAR PORTRAIT]====*/
-
-/* Celulares até 767px - cobre TODOS os celulares incluindo Moto E7 */
 @media screen and (max-width: 767px) and (orientation: portrait) {
     header{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    body{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center
-    }
-
-    main{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center
     }
 
     .menu__cabecalho{
@@ -518,13 +487,10 @@ header{
 
     .imagem__capa{
         max-height: 38%;
-        /*right: 25%;
-        left: 25%;*/
         top: 10%;
-        left: auto;
+        left: 50%;
         right: auto;
-        
-        
+        transform: translateX(-50%);
     }
 
     .imagem__fundo{
@@ -560,7 +526,6 @@ header{
     }
 }
 
-/* Celulares muito pequenos - ajuste fino */
 @media screen and (max-width: 360px) and (orientation: portrait) {
     .texto__principal__titulo{
         font-size: 120%;
