--- a/src/meuComponente.css
+++ b/src/meuComponente.css
@@ -106,12 +106,14 @@ header{
 .imagem__capa{
     position: fixed;
     right: 10%;
-    max-height: 100%;
+    max-height: 60%;
     width: auto;
-    border-radius: 1rem;
+    border-radius: 5rem;
     animation-name: animacaoCapa;
     animation-duration: 3s;
     z-index: 1;
+    top: 15%;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .imagem__fundo{
@@ -492,6 +494,7 @@ header{
 
     .menu__cabecalho{
         position: relative;
+        justify-content: center;
     }
 
     .menu__cabecalho a{
@@ -504,11 +507,13 @@ header{
     }
 
     .imagem__capa{
-        position: absolute;
+        position:static;
         max-height: 38%;
-        right: 25%;
-        left: 25%;
+        right: auto;
+        left: auto;
+        align-self: center;
         top: 10%;
+        padding: 1rem;
     }
 
     .imagem__fundo{
@@ -516,14 +521,20 @@ header{
     }
 
     .texto__principal{
-        top: 55%;
+        /*top: 55%;*/
+        position: static;
+        padding: 0.5rem;
+        padding-top: 1.5rem;
+        padding-bottom: 1rem;
+        margin: auto;
         max-width: 85%;
-        left: 7.5%;
-        right: 7.5%;
+        align-self: center;
+        /*left: 7.5%;
+        right: 7.5%;*/
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         text-align: justify;
     }
     
